--- a/modules/ledger/templates/ledger.html
+++ b/modules/ledger/templates/ledger.html
@@ -49,6 +49,13 @@
       <div id="createFields">
         <label for="newAccountName">Account Name:</label>
         <input type="text" id="newAccountName" placeholder="e.g. Savings, Travel Fund" />
+        <hr>
+        <label for="IsDoubleBooking"
+        title="Double-Entry Book Keeping is a financing method of keeping two finanical logs,
+        one for expenses and the other for income.">
+          Do double-entry booking?
+        </label>
+        <input type="checkbox" id="IsDoubleBooking"/>
       </div>
 
       <div id="deleteFields" style="display:none;">
