--- a/modules/centralfiles/templates/profile.html
+++ b/modules/centralfiles/templates/profile.html
@@ -144,6 +144,10 @@
                 <span id="field-last_name" class="editable" onclick="makeEditable('field-last_name', '{{ profile.cfid }}')">{{ profile.last_name }}</span>
               </div>
               <div class="field">
+                <label>Primary Alias</label>
+                <span id="field-alias" class="editable" onclick="makeEditable('field-alias', '{{ profile.cfid }}')">{{ profile.alias }}</span>
+              </div>
+              <div class="field">
                 <label>Profile Type</label>
                 <span
                   id="field-prof_type"
